fix import and sonar issues